--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -28,7 +28,7 @@
   overflow: hidden;
   padding: 0 10px 20px 10px;
   cursor: pointer;
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 .ui-grid-menu .ui-grid-menu-inner {
